General fixing and re-ordering.